# Generated by Django 5.2.13 on 2026-04-09 00:10

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('timesheets', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='WorkflowEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('event_type', models.CharField(choices=[('draft_created', 'Draft Created'), ('submitted', 'Submitted'), ('approved', 'Approved'), ('rejected', 'Rejected'), ('resubmitted', 'Resubmitted')], max_length=32)),
                ('comment', models.TextField(blank=True)),
                ('metadata_json', models.JSONField(blank=True, default=dict)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('actor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='workflow_events', to=settings.AUTH_USER_MODEL)),
                ('timesheet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='workflow_events', to='timesheets.timesheet')),
            ],
            options={
                'ordering': ['-created_at', '-id'],
            },
        ),
    ]
