# Generated by Django 5.2.13 on 2026-04-09 00:10

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('audit', '0001_initial'),
        ('timesheets', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('notification_type', models.CharField(choices=[('submission', 'Submission'), ('approval', 'Approval'), ('rejection', 'Rejection'), ('resubmission', 'Resubmission'), ('reminder_summary', 'Reminder Summary'), ('other', 'Other')], default='other', max_length=32)),
                ('title', models.CharField(max_length=255)),
                ('body', models.TextField()),
                ('severity', models.CharField(choices=[('info', 'Info'), ('success', 'Success'), ('warning', 'Warning'), ('error', 'Error')], default='info', max_length=16)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('read_at', models.DateTimeField(blank=True, null=True)),
                ('recipient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to=settings.AUTH_USER_MODEL)),
                ('timesheet', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='timesheets.timesheet')),
                ('workflow_event', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='notifications', to='audit.workflowevent')),
            ],
            options={
                'ordering': ['-created_at', '-id'],
            },
        ),
    ]
